--- a/src/HomeScreen.form
+++ b/src/HomeScreen.form
@@ -37,7 +37,7 @@
           <text value="MnM Uni Planner"/>
         </properties>
       </component>
-      <component id="88241" class="javax.swing.JLabel">
+      <component id="88241" class="javax.swing.JLabel" binding="welcomeLabel">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
