--- a/src/AssignmentAddScreen.form
+++ b/src/AssignmentAddScreen.form
@@ -126,7 +126,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="6a3fd" class="javax.swing.JButton" binding="goBack">
+              <component id="6a3fd" class="javax.swing.JButton" binding="backButton">
                 <constraints>
                   <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
