--- a/src/CalendarScreen.form
+++ b/src/CalendarScreen.form
@@ -209,7 +209,7 @@
             <border type="none"/>
             <children/>
           </grid>
-          <grid id="e72aa" binding="calendarPanel" layout-manager="GridLayoutManager" row-count="7" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e72aa" layout-manager="GridLayoutManager" row-count="7" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="20" right="20"/>
             <constraints border-constraint="Center"/>
             <properties>
